hide overflow on ha-switch and remove other overflow fixes (why didn't I do this in the first place???) and make config panel version info width fit content

--- a/src/css/ha-dialog.css
+++ b/src/css/ha-dialog.css
@@ -1,6 +1,5 @@
 /* Fix horizontal overflow, divider color, and slider thumb */
 #content {
-	overflow-x: hidden;
 	--divider-color: var(--md-sys-color-outline-variant);
 	--md-slider-handle-color: var(--ha-dialog-surface-background);
 }
